[package]
name = "derpy-bot"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.51", features = ["alloc"] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
log = "0.4"
anyhow = "1.0.102"

[build-dependencies]
embuild = "0.33"
